<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>MainWindow</class>
 <widget class="QMainWindow" name="MainWindow">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>668</width>
    <height>520</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>GraphicsFramework</string>
  </property>
  <widget class="QWidget" name="centralWidget">
   <layout class="QHBoxLayout" name="horizontalLayout">
    <property name="leftMargin">
     <number>0</number>
    </property>
    <property name="topMargin">
     <number>0</number>
    </property>
    <property name="rightMargin">
     <number>0</number>
    </property>
    <property name="bottomMargin">
     <number>0</number>
    </property>
    <item>
     <widget class="QSplitter" name="splitter">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
      </property>
      <widget class="QGraphicsView" name="graphicsView"/>
      <widget class="QTableView" name="tableView">
       <property name="selectionMode">
        <enum>QAbstractItemView::SingleSelection</enum>
       </property>
      </widget>
     </widget>
    </item>
   </layout>
  </widget>
  <widget class="QMenuBar" name="menuBar">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>668</width>
     <height>19</height>
    </rect>
   </property>
   <widget class="QMenu" name="menuFile">
    <property name="title">
     <string>File</string>
    </property>
    <addaction name="exitAct"/>
   </widget>
   <widget class="QMenu" name="menu_Tools">
    <property name="title">
     <string>&amp;Tools</string>
    </property>
    <addaction name="setColorAct"/>
    <addaction name="lineEditAct"/>
    <addaction name="separator"/>
    <addaction name="clearAct"/>
   </widget>
   <widget class="QMenu" name="menuBD">
    <property name="title">
     <string>BD</string>
    </property>
    <addaction name="createConnectionAct"/>
    <addaction name="createTableAct"/>
    <addaction name="writeToBdAct"/>
    <addaction name="readFromBdAct"/>
    <addaction name="queryModelAct"/>
    <addaction name="tableModelAct"/>
   </widget>
   <addaction name="menuFile"/>
   <addaction name="menu_Tools"/>
   <addaction name="menuBD"/>
  </widget>
  <widget class="QToolBar" name="mainToolBar">
   <attribute name="toolBarArea">
    <enum>TopToolBarArea</enum>
   </attribute>
   <attribute name="toolBarBreak">
    <bool>false</bool>
   </attribute>
   <addaction name="exitAct"/>
  </widget>
  <widget class="QStatusBar" name="statusBar"/>
  <widget class="QDockWidget" name="dockWidget">
   <attribute name="dockWidgetArea">
    <number>2</number>
   </attribute>
   <widget class="QWidget" name="dockWidgetContents">
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
      <widget class="QGroupBox" name="groupBox">
       <property name="title">
        <string>Rotation</string>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout_2">
        <item>
         <widget class="QLabel" name="label">
          <property name="text">
           <string>Angle</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QSpinBox" name="angleSpn"/>
        </item>
        <item>
         <widget class="QPushButton" name="rotateBtn">
          <property name="text">
           <string>Rotate</string>
          </property>
         </widget>
        </item>
       </layout>
      </widget>
     </item>
     <item>
      <widget class="QGroupBox" name="groupBox_2">
       <property name="title">
        <string>Scale</string>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout_3">
        <item>
         <widget class="QLabel" name="label_2">
          <property name="text">
           <string>Factor</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QDoubleSpinBox" name="scaleFactorSpn"/>
        </item>
        <item>
         <widget class="QPushButton" name="scaleBtn">
          <property name="text">
           <string>Scale</string>
          </property>
         </widget>
        </item>
       </layout>
      </widget>
     </item>
     <item>
      <widget class="QGroupBox" name="groupBox_3">
       <property name="title">
        <string>Shear</string>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout_4">
        <item>
         <widget class="QLabel" name="label_3">
          <property name="text">
           <string>X</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QDoubleSpinBox" name="shearXSpn"/>
        </item>
        <item>
         <widget class="QLabel" name="label_4">
          <property name="text">
           <string>Y</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QDoubleSpinBox" name="shearYSpn"/>
        </item>
        <item>
         <widget class="QPushButton" name="shearBtn">
          <property name="text">
           <string>Shear</string>
          </property>
         </widget>
        </item>
       </layout>
      </widget>
     </item>
     <item>
      <spacer name="verticalSpacer">
       <property name="orientation">
        <enum>Qt::Vertical</enum>
       </property>
       <property name="sizeHint" stdset="0">
        <size>
         <width>20</width>
         <height>40</height>
        </size>
       </property>
      </spacer>
     </item>
    </layout>
   </widget>
  </widget>
  <action name="exitAct">
   <property name="icon">
    <iconset resource="images.qrc">
     <normaloff>:/Images/iconExit.ico</normaloff>:/Images/iconExit.ico</iconset>
   </property>
   <property name="text">
    <string>&amp;Exit</string>
   </property>
  </action>
  <action name="setColorAct">
   <property name="text">
    <string>Set &amp;color...</string>
   </property>
  </action>
  <action name="lineEditAct">
   <property name="text">
    <string>Line edit...</string>
   </property>
  </action>
  <action name="clearAct">
   <property name="text">
    <string>Clear</string>
   </property>
  </action>
  <action name="createConnectionAct">
   <property name="text">
    <string>Create connection</string>
   </property>
  </action>
  <action name="createTableAct">
   <property name="text">
    <string>Create table</string>
   </property>
  </action>
  <action name="writeToBdAct">
   <property name="text">
    <string>Write to BD</string>
   </property>
  </action>
  <action name="readFromBdAct">
   <property name="text">
    <string>Read from BD</string>
   </property>
  </action>
  <action name="queryModelAct">
   <property name="text">
    <string>Query model</string>
   </property>
  </action>
  <action name="tableModelAct">
   <property name="text">
    <string>Table model</string>
   </property>
  </action>
 </widget>
 <layoutdefault spacing="6" margin="11"/>
 <resources>
  <include location="images.qrc"/>
 </resources>
 <connections>
  <connection>
   <sender>exitAct</sender>
   <signal>triggered()</signal>
   <receiver>MainWindow</receiver>
   <slot>close()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>-1</x>
     <y>-1</y>
    </hint>
    <hint type="destinationlabel">
     <x>199</x>
     <y>149</y>
    </hint>
   </hints>
  </connection>
 </connections>
</ui>
